fixed page switching

--- a/css/layout.css
+++ b/css/layout.css
@@ -11,6 +11,15 @@ header {
   text-align: center;
 }
 
+div h3 {
+  float: left;
+  width: 200px;
+}
+
+main {
+  clear: both;
+}
+
 section {
   box-sizing: border-box;
   width: 300px;
