--- a/css/base.css
+++ b/css/base.css
@@ -1,6 +1,12 @@
+body {
+  background-color: rgb(250, 250, 228);
+}
 
+section {
+  background-color: #aed177;
+}
 h1 {
-  font-size: 2em;
+  font-size: 5em;
   font-weight: bolder;
   font-family: ‘Satisfy’, cursive;
 }
