--- a/css/layout.css
+++ b/css/layout.css
@@ -32,20 +32,19 @@ main {
 
 section {
   box-sizing: border-box;
-  width: 300px;
-  height: 400px;
-  /* float: left; */
+  width: 420px;
+  height: 300px;
   box-sizing: border-box;
   margin: 15px;
   border: 2px solid darkslategray;
-  /* display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap; */
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-flow: column;
 }
 
 section h2 {
-  padding-bottom: 10px;
-  margin: 10px;
+  text-align: center;
 }
 
 section div {
@@ -58,9 +57,9 @@ section p {
   padding: 10px
 }
 
-section div img {
-  max-width: 100%;
-  max-height: 100%;
+section img {
+  max-width: 90%;
+  max-height: 80%;
 }
 
 #photo-template {
